feat: show forecast function added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div>
         <label for="city">City</label>
-        <input type="text" id="city" value="Bucharest" />
+        <input type="text" id="city" />
       </div>
       <div>
         <button id="show-weather">Show Weather</button>
